# brs-recon

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  ETHICS.md  LEGAL.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-GPL3  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  bandit-report.json  coverage.xml  pyproject.toml  pytest.ini  safety-report.json  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
brs-recon/: main.py
brs-recon/core/: base.py  config.py  logger.py  results.py
brs-recon/modules/: domain_recon.py  network_discovery.py  network_utils.py  port_scanning.py  system_info.py
brsrecon/: __init__.py  __main__.py  commands.py  main.py
brsrecon/core/: __init__.py  base.py  benchmark.py  config.py  export.py  logger.py  models.py  results.py  structured_logger.py  utils.py
brsrecon/modules/: __init__.py  domain_recon.py  network_discovery.py  network_utils.py  port_scanning.py  port_utils.py  system_info.py  system_utils.py  vulnerability.py
cli/: __init__.py
config/: config.yaml
examples/: README.md
examples/outputs/: network-discovery-example.json  scan-report-example.html  vulnerability-scan-example.sarif
examples/schemas/: sarif-mapping.json  scan-result.schema.json
requirements/: constraints.txt  requirements-base.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
results/: README.md
results/csv/: brs-recon_google.com_20250907-194742.csv
results/exports/: export_20250908-100212.json  export_20250908-101657.json  export_20250908-102220.json  export_20250908-103245.json  export_20250908-104834.json  export_20250908-105148.json  export_20250908-105625.json  export_20250908-110238.json  export_20250908-110455.json  export_20250908-110659.json  export_20250908-110742.json  export_20250908-110832.json  export_20250908-113638.json  export_20250908-113655.json  export_20250908-124119.json  export_20250908-124321.json  export_20250908-125732.json  export_20250908-130236.json  export_20250908-130641.json  export_20250908-130647.json  export_20250908-132349.json  export_20250908-133528.json  export_20250908-133542.json  export_20250908-133632.json  export_20250908-133919.json  export_20250908-133948.json
results/html/: brs-recon_example.com_2025-09-07T18:45:00Z.html  brs-recon_google.com_20250907-194742.html
results/sarif/: brs-recon_127.0.0.1_20250907-193324.sarif  brs-recon_example.com_2025-09-07T18:45:00Z.sarif
results/scans/: 20250907-182817_port_scanning_127.0.0.1.json  20250907-182935_domain_reconnaissance_google.com.json  20250907-182943_network_discovery_127.0.0.1.json  20250907-185557_system_information_localhost.json  20250907-185810_vulnerability_scanner_127.0.0.1.json  20250907-191810_vulnerability_scanner_127.0.0.1.json  20250907-192127_vulnerability_scanner_google.com.json  20250907-192410_vulnerability_scanner_badssl.com.json  20250907-193324_vulnerability_scanner_127.0.0.1.json  20250907-193706_domain_reconnaissance_example.com.json  20250907-193735_domain_reconnaissance_github.com.json  20250907-194042_network_discovery_127.0.0.1.json  20250907-194055_network_discovery_192.168.1.0_24.json  20250907-194316_network_discovery_127.0.0.1.json  20250907-194722_port_scanning_127.0.0.1.json  20250907-194742_port_scanning_google.com.json  20250907-195052_system_information_localhost.json  20250907-195100_system_information_localhost.json  20250907-223157_system_information_localhost.json  20250908-081020_system_information_localhost.json  20250908-081320_network_discovery_192.168.1.0_24.json  20250908-081320_test_module_example.com.json  20250908-081321_port_scanning_example.com.json  20250908-081437_test_module_example.com.json  20250908-081438_network_discovery_192.168.1.0_24.json  20250908-081438_port_scanning_example.com.json  20250908-081522_network_discovery_192.168.1.0_24.json  20250908-081522_port_scanning_example.com.json  20250908-081522_test_module_example.com.json  20250908-081546_network_discovery_192.168.1.0_24.json  20250908-081546_port_scanning_example.com.json  20250908-081546_test_module_example.com.json  20250908-081628_port_scanning_127.0.0.1.json  20250908-081832_network_discovery_192.168.1.0_24.json  20250908-081832_port_scanning_example.com.json  20250908-081832_test_module_example.com.json  20250908-081840_network_discovery_127.0.0.1.json  20250908-081921_test_module_example.com.json  20250908-081922_network_discovery_192.168.1.0_24.json  20250908-081922_port_scanning_example.com.json  (+149 more)
scripts/: run_tests.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_commands.py  test_main.py
tests/unit/core/: __init__.py  test_base.py  test_benchmark.py  test_config.py  test_config_real.py  test_models.py  test_models_simple.py  test_results.py  test_results_real.py  test_structured_logger.py  test_utils.py  test_utils_real.py
tests/unit/modules/: __init__.py  test_network_discovery.py  test_port_scanning.py
